[project]
name = "valstorm-cli"
version = "0.2.0"
description = "Valstorm Developer CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "valstorm-mcp @ git+https://github.com/Valstorm-Corp/valstorm-mcp.git"
]

[project.scripts]
valstorm = "valstorm_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/valstorm_cli"]

[tool.hatch.build.targets.sdist]
include = [
    "src/valstorm_cli/**/*.py",
]
